啥也不是的部署

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -34,18 +34,11 @@ jobs:
           yarn run docs:build
           > src/.vuepress/dist/.nojekyll
       - name: 👷部署文档
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           # 部署到 gh-pages 分支
-          branch: gh-pages
-          folder: src/.vuepress/dist
-          access_token: ${{ secrets.ACCESS_TOKEN }}
-#      - name: 👷部署文档
-#        uses: crazy-max/ghaction-github-pages@v2
-#        with:
-#          # 部署到 gh-pages 分支
-#          target_branch: gh-pages
-#          # 部署目录为 VuePress 的默认输出目录
-#          build_dir: src/.vuepress/dist
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          target_branch: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          build_dir: src/.vuepress/dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
